--- a/quant/股票投资-2021H2.md
+++ b/quant/股票投资-2021H2.md
@@ -1,2 +1,6 @@
 ## 2021上半年操盘总结
-1. 
+### 浮夸
+  被2020年的操盘迷失心智， 把牛市的基调忘却脑后。 得意忘形时。
+  
+### 优柔寡断
+  在已经认清现实的情况下， 竟然还心存幻想， 把胜利果实全部相让。典型的操盘： 保利地产  双汇发展。  当股票出现明显破位 & 股东数新高时， 还不果断离场。 总亏损6万  
