--- a/quant/股票投资-2021H2.md
+++ b/quant/股票投资-2021H2.md
@@ -7,6 +7,12 @@
   
 ## 2021下半年目标
 
-### 知行合一
+### 明确操盘守则
 
-看
+看准的要敢于入场， 破位则立马抽身
+
+### 牢记大基调
+
+1. 美股无限背离， 美元天量发行
+2. 国内经济疲软， 出现下行形态
+3. 创业版背离， 大盘高位。 证券化率 & 股债收益比 都呈离场状态
