--- a/quant/股票投资-2021H2.md
+++ b/quant/股票投资-2021H2.md
@@ -16,3 +16,9 @@
 1. 美股无限背离， 美元天量发行
 2. 国内经济疲软， 出现下行形态
 3. 创业版背离， 大盘高位。 证券化率 & 股债收益比 都呈离场状态
+
+### 选股思路
+
+1. 医疗  核心看成长。 中药可能有低洼
+2. 消费  关于周期行业，如鸡肉。 长期关注双汇  
+3. 科技  5G通信相关， 中兴可能存在第二波机会。 半导体已经在天上， 关注中芯国际
